...
            modifier = Modifier.padding(padding),
        ) {
            ListPreferenceWidget(
                preferences = themes,
                currentValue = selectedTheme,
                onValueChange = onThemeChange,
                modifier = Modifier.testIdentifier("theme_preference"),
            )

            ListPreferenceWidget(
                preferences = locales,
                currentValue = getCurrentLocale(),
                onValueChange = onLocaleChange,
                modifier = Modifier.testIdentifier("locale_preference"),
            )
        }
    }
}

private fun Theme.getLabel(context: Context): String =
...
