...
    override val id: String = NAVIGATION_DRAWER_SETTINGS_ID
    override val labelRes: Int = string.settings_screen_label
    override val icon: ImageVector = Icons.Filled.Settings
    override val action: (NavController) -> Unit = { navController ->
        navController.navigateToSettings()
    }
    override val testIdentifier: String = "settings_navigation"
}

public fun NavController.navigateToSettings(navOptions: NavOptions? = buildSettingsNavOptions()) {
    this.navigate(
        route = SettingsRoute(),
        navOptions = navOptions,
...
